# stm32_motor_control_protocol

./: .bandit  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  HARDWARE_TEST_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  LICENSE  MANIFEST.in  MCP_PROTOCOL_NOTES.md  Makefile  PROTOCOL_DOCUMENTATION.md  PUBLISHING.md  README.md  TODAY_BUILD_PLAN.md  pyproject.toml
.github/workflows/: publish.yml  release-notes.yml  test.yml
examples/: README.md  speed_control_example.py
serial_traffic_logs/: 1_connect_disconnect_dump.txt  2_brief_connect_press_ACK_dump.txt  3_brief_run_torque_dump.txt  4_brief_run_velocity_dump.txt  minimal_velocity_control.txt
st_mcp/: __init__.py  exceptions.py  frame.py  minimal_motor_control.py  motor_controller.py  registers.py  registry.py
st_mcp/commands/: __init__.py  monitor.py  motor.py  registry.py
tests/: __init__.py  test_example.py  test_frame.py  test_registers.py  test_registry_commands.py
